add a proc